# school-aircraft-planner-plugin

./: .gitignore  CMakeLists.txt  readme.md
cmake/: FindQGIS-dd.cmake  FindQGIS.cmake
dependencies/qgis/include/qgis/: qgsconfig.h  ui_3ddebugwidget.h  ui_3dnavigationwidget.h  ui_ambientocclusionsettingswidget.h  ui_animation3dwidget.h  ui_animationexport3ddialog.h  ui_goochmaterialwidget.h  ui_line3dsymbolwidget.h  ui_map3dconfigwidget.h  ui_map3dexportwidget.h  ui_materialwidget.h  ui_metalroughmaterialwidget.h  ui_nullmaterialwidget.h  ui_phongmaterialwidget.h  ui_phongtexturedmaterialwidgetbase.h  ui_point3dsymbolwidget.h  ui_polygon3dsymbolwidget.h  ui_qgisapp.h  ui_qgs25drendererwidgetbase.h  ui_qgs3doptionsbase.h  ui_qgs3drendererrulepropswidget.h  ui_qgs3dviewsmanagerdialog.h  ui_qgsabout.h  ui_qgsaddattrdialogbase.h  ui_qgsaddtaborgroupbase.h  ui_qgsadvanceddigitizingdockwidgetbase.h  ui_qgsadvanceddigitizingfloaterbase.h  ui_qgsadvancedsettingswidget.h  ui_qgsanimationexportdialogbase.h  ui_qgsannotationcommonpropertieswidgetbase.h  ui_qgsannotationitempropertieswidgetbase.h  ui_qgsannotationlayerpropertiesbase.h  ui_qgsannotationlinetextwidgetbase.h  ui_qgsannotationpicturewidgetbase.h  ui_qgsannotationpointtextwidgetbase.h  ui_qgsannotationrectangulartextwidgetbase.h  ui_qgsannotationsymbolwidgetbase.h  ui_qgsannotationwidgetbase.h  ui_qgsarcgisrestsourcewidgetbase.h  ui_qgsarcgisservicesourceselectbase.h  (+498 more)
dependencies/qgis/lib/: libqgis_native.so.3.43.0  libqgisgrass8.so.3.43.0
dependencies/qgis/lib/qgis/: crssync  pdal_wrench  untwine
dependencies/qgis/lib/qgis/grass/modules/: qgis.d.rast8  qgis.g.info8  qgis.r.in8  qgis.v.in8
doc/: documents.qrc
resources/: avatar.qrc  resources.qrc  shader.qrc
resources/shaders/: demomodel.fs  demomodel.vs
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QGISPathResolver.h  main.cpp  mainwindow.cpp
src/core/: Model.cpp  Model.h  RoutePlanner.cpp  RoutePlanner.h  SharedContextManager.cpp  SharedContextManager.h  WorkspaceState.cpp  WorkspaceState.h
src/gui/: Canvas.cpp  Canvas.h  DockWidget.cpp  DockWidget.h  LeftDockWidget.cpp  LeftDockWidget.h  Menu.cpp  Menu.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  OpenGLCanvas.cpp  OpenGLCanvas.h  RightDockWidget.cpp  RightDockWidget.h  StyleManager.h
src/log/: QgisDebug.cpp  qgis_debug.cpp
src/opengl/: Camera.cpp  Camera.h  Primitive.cpp  Primitive.h
src/schoolcore/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  Primitive.cpp  Primitive.h  WorkspaceState.cpp  WorkspaceState.h  camera.cpp  camera.h
src/schoolcore/core/: CMakeLists.txt  WorkspaceState.cpp  WorkspaceState.h
src/schoolcore/gui/: CMakeLists.txt  MyOpenGLWidget.cpp  MyOpenGLWidget.h
src/schoolcore/log/: CMakeLists.txt
src/schoolcore/opengl/: CMakeLists.txt  Primitive.cpp  Primitive.h  camera.cpp  camera.h
